# captia-synthetic-data-bms

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.claude/: README.md  settings.local.json
.claude/agents/: infra-reviewer.md  observability-reviewer.md  qa-reviewer.md  repo-cartographer.md  security-reviewer.md  spec-architect.md
.claude/rules/: 001-spec-driven-development.md  002-captia-canonical-schema.md  003-vendoring-policy.md  004-docker-compose-conventions.md  005-language-policy.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  security.yml
compose/: base.yaml  data-plane-init.yaml  generator.yaml  observability.yaml
config/projects/: bms_v1_3years.yaml  bms_v1_caseA_e2e_host.yaml  bms_v1_caseB_consumption.yaml  bms_v1_caseC_faults.yaml  bms_v1_caseD_iaq.yaml  bms_v1_demo.yaml
docs/: CAPTIA_Informe_CasosDeUso_DatosSinteticos.md  QUICKSTART.md  TROUBLESHOOTING.md  captia-connect-partner-integration.pptx  index.md
docs/architecture/: captia-schema.md  centinela-overview.md  data-flow.md  index.md  medallion.md
docs/archive/: CENTINELA_Guia_Alumnos_v4.md  MEDALLION_Arquitectura_Guia_Referencia.md  index.md
docs/audit/: 00-repo-map.md  ACTION_PLAN.md  AUDIT_REPORT.md  AUDIT_RERUN_2026-05-10.md  CONSISTENCY_MATRIX.md  DOCS_REPORT.md  DOCS_RESTRUCTURE_PLAN.md  E2E_VALIDATION_REPORT.md  FINAL_REPORT.md  NOTEBOOK_AUDIT.md  NOTEBOOK_AUDIT_DETAILED.md  NOTEBOOK_EXECUTION_REPORT.md  NOTEBOOK_PLAN.md  PHYSICAL_REALISM_REPORT.md  SPEC_TEST_TRACEABILITY.md  STATUS.md  USE_CASE_MATRIX.md  index.md
docs/captia/: economic_baseline.md
docs/captia-corporate/: about.md  business-case.md  executive-summary.md  index.md
docs/contracts/: influx-schema.md  medallion-layers.md  mqtt-topics.md  variable-catalog.md
docs/decisions/: index.md
docs/getting-started/: index.md  local-setup.md  notebooks.md  overview.md
docs/notebooks/: how-to-run.md  index.md  notebook-map.md
docs/operations/: dependabot.md  docker.md  environment.md  healthchecks.md  init-env.md  troubleshooting.md  visualizing-data.md
docs/physical-model/: index.md
docs/specs/: index.md
docs/use-cases/: case-a-pipeline-iot.md  case-b-energy-forecasting.md  case-c-hvac-anomaly.md  case-d-iaq-occupancy.md  case-e-weather-solar.md  case-f-mlops.md  case-g-data-quality-agents.md  case-h-rag-chatbot.md  case-i-spark-pandas.md  case-j-traffic-yolo.md  index.md
docs/validation/: data-quality.md  e2e.md  ml-validation.md  physical-realism.md
extensions/bms_calibration/: README.md  pyproject.toml
extensions/bms_calibration/src/bms_calibration/: __init__.py  fault_event_sink.py  faults.py  physics_overrides.py  school_calendar.py
extensions/bms_calibration/tests/: conftest.py  test_determinism.py  test_fault_event_sink.py  test_faults.py  test_physics_overrides.py  test_school_calendar.py
extensions/bms_signal_alias/: README.md  pyproject.toml
extensions/bms_signal_alias/src/bms_signal_alias/: __init__.py  alias_sink.py  derivations.py
extensions/bms_signal_alias/tests/: test_alias_sink.py
infra/grafana/: Dockerfile
infra/loki/: loki-config.yml
infra/mosquitto/: mosquitto.conf
infra/mqttx/: README.md  captia-bms-mqttx-config.json
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
infra/telegraf/: telegraf.conf
modules/bms-data-generator/: Dockerfile  README.md  pyproject.toml
modules/bms-data-generator/src/bms_data_generator/: __init__.py  __main__.py  config.py  logging_config.py  main.py  metrics.py  rate_limit.py
modules/bms-data-generator/src/bms_data_generator/api/: control.py  datasets.py  health.py  query.py
modules/bms-data-generator/src/bms_data_generator/services/: calibration_loader.py  dump_service.py  query_service.py  runner_service.py
modules/bms-data-generator/tests/: conftest.py
modules/bms-data-generator/tests/integration/: test_api_control.py  test_api_datasets.py  test_api_query.py  test_calendar_e2e.py  test_full_path_e2e.py  test_rate_limiting_audit.py  test_use_cases_e2e.py
modules/bms-data-generator/tests/unit/: test_api_health.py  test_config.py  test_dump_service.py  test_metrics.py  test_query_service.py  test_runner_service.py
notebooks/: README.md
notebooks/00_project_overview/: 00_arquitectura_medallion_captia.ipynb  01_schema_captia_influxdb.ipynb  02_conexion_influxdb_y_variables_entorno.ipynb
notebooks/01_case_A_pipeline_iot/: 01_explicacion_pipeline_centinela.ipynb  02_publicacion_mqtt_a_influxdb.ipynb  03_validacion_telegraf_influx_grafana.ipynb
notebooks/02_case_B_energy_forecasting/: 01_eda_consumo_electrico.ipynb  02_bronze_to_silver_energy.ipynb  03_features_forecasting.ipynb  04_baseline_sarima_xgboost_lstm.ipynb  05_validacion_modelo_24h.ipynb
notebooks/03_case_C_hvac_anomaly_detection/: 01_eda_hvac_fdd.ipynb  02_bronze_to_silver_hvac.ipynb  03_features_anomalias_hvac.ipynb  04_isolation_forest_autoencoder.ipynb  05_validacion_fallos_etiquetados.ipynb
notebooks/04_case_D_iaq_occupancy/: 01_eda_iaq_ocupacion.ipynb  02_bronze_to_silver_iaq.ipynb  03_features_confort_ocupacion.ipynb  04_modelo_ocupacion_desde_ambiente.ipynb  05_validacion_iaq_confort.ipynb
notebooks/05_case_E_weather_solar/: 01_eda_era5.ipynb  02_bronze_to_silver_weather.ipynb  03_features_meteorologicas.ipynb  (+1 more)
scripts/: _fix_section_order.py  _load_env.sh  _nb_builder.py  audit_mini_scenario.yaml  audit_notebooks.py  build_3year_datasets.py  build_notebook_data.py  build_notebook_template.py  execute_notebooks.py  export_dump.sh  fix_notebooks_setup_order.py  grafana_demo_publisher.sh  init_env.sh  preflight.sh  run_all_notebooks.py  smoke_grafana.sh  smoke_influx.sh  smoke_mqtt.sh  stream_live.sh  update_vendor.sh  verify_canonical_schema.sh  wait_healthy.sh
(+190 files in other folders)
