[project]
name = "captia-synthetic-data-bms"
version = "0.1.0"
description = "CAPTIA synthetic data generator for BMS (Building Management System) domains"
requires-python = ">=3.12"
authors = [{ name = "Jaime Sendra (CAPTIA Technology)", email = "jaime.sendra@captiatechnology.com" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "synthetic-generator",
    "bms-calibration",
    "bms-data-generator",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = [
    "modules/bms-data-generator",
    "extensions/bms_calibration",
    "vendor/synthetic-generator",
]

[tool.uv.sources]
synthetic-generator = { workspace = true }
bms-calibration = { workspace = true }
bms-data-generator = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["modules/bms-data-generator/src", "extensions/bms_calibration/src", "vendor/synthetic-generator/src"]
extend-exclude = ["vendor/synthetic-generator"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP042",  # StrEnum suggestion: keep `str, Enum` for explicitness
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["modules", "extensions", "tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers --import-mode=importlib"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires services (mqtt, influx, redis)",
    "smoke: post-deploy health verification",
    "snapshot: deterministic regression",
    "performance: throughput benchmarks",
    "slow: takes more than 5 seconds",
]
