[project]
name = "captia-synthetic-data-bms"
version = "0.1.0"
description = "CAPTIA synthetic data generator for BMS (Building Management System) domains"
requires-python = ">=3.12"
authors = [{ name = "Jaime Sendra (CAPTIA Technology)", email = "jaime.sendra@captiatechnology.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "synthetic-generator",
    "bms-calibration",
    "bms-signal-alias",
    "bms-data-generator",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]

[tool.uv.workspace]
members = [
    "modules/bms-data-generator",
    "extensions/bms_calibration",
    "extensions/bms_signal_alias",
    "vendor/synthetic-generator",
]

[tool.uv.sources]
synthetic-generator = { workspace = true }
bms-calibration = { workspace = true }
bms-signal-alias = { workspace = true }
bms-data-generator = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["modules/bms-data-generator/src", "extensions/bms_calibration/src", "extensions/bms_signal_alias/src", "vendor/synthetic-generator/src"]
# Notebooks (.ipynb) tienen imports por celda y nombres definidos en celdas
# previas que el linter estático no resuelve. scripts/build_notebooks/ es el
# builder que materializa los notebooks — su estilo es libre por diseño.
extend-exclude = [
    "vendor/synthetic-generator",
    "notebooks",
    "scripts/build_notebooks",
    "scripts/_nb_builder.py",
    ".claude/skills",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP042",  # StrEnum suggestion: keep `str, Enum` for explicitness
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["modules", "extensions", "tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers --import-mode=importlib"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: requires services (mqtt, influx, redis)",
    "smoke: post-deploy health verification",
    "snapshot: deterministic regression",
    "performance: throughput benchmarks",
    "slow: takes more than 5 seconds",
]

[tool.coverage.run]
source = [
    "modules/bms-data-generator/src/bms_data_generator",
    "extensions/bms_calibration/src/bms_calibration",
]
branch = false
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
# H-05 (CI gating): umbral 80% combinado para módulos clave.
# bms_calibration tiende al 100%, bms_data_generator queda ~88%.
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == \"__main__\":",
]
