[project]
name = "bms-signal-alias"
version = "0.1.0"
description = "Alias sink wrapper that renames vendor variable names to production-canonical names (CAPTIA simarro-prod)"
requires-python = ">=3.12"
authors = [{ name = "Jaime Sendra (CAPTIA Technology)", email = "jaime.sendra@captiatechnology.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "pyyaml>=6.0",
    "synthetic-generator",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bms_signal_alias"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: unit tests",
]
