[project]
name = "bms-data-generator"
version = "0.1.0"
description = "FastAPI control plane for BMS synthetic data generator"
requires-python = ">=3.12"
authors = [{ name = "Jaime Sendra (CAPTIA Technology)", email = "jaime.sendra@captiatechnology.com" }]
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "synthetic-generator",
    "bms-calibration",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
bms-data-generator = "bms_data_generator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bms_data_generator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: unit tests, no I/O",
    "integration: requires services (mqtt, influx)",
    "smoke: post-deploy smoke",
]
